--- a/about.html
+++ b/about.html
@@ -1,5 +1,8 @@
 <h1> Olá, esse arquivo é do github </h1>
 <p>testando git</p>
+<head>
+    <title>Olá mundo</title>
+</head>
 <body>
     Adicionando dados
 </body>
