--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
-<h1> Olá, esse arquivo é do github </h1>
-<p>testando git</p>
 <head>
     <title>Olá mundo</title>
 </head>
 <body>
-    Adicionando dados
+    <h1> Olá, esse arquivo é do github </h1>
+    <h2>teste</h2>
+    <p>testando git</p>
 </body>
