--- a/about.html
+++ b/about.html
@@ -5,5 +5,5 @@
     <h1> Olá, esse arquivo é do github </h1>
     <h2>adicionando testes</h2>
     <p>testando git</p>
-
+    <p>agora está correto</p>
 </body>
