--- a/about.html
+++ b/about.html
@@ -6,5 +6,5 @@
     <h2>adicionando testes</h2>
     <p>testando git</p>
     <p>agora está correto</p>
-
+    <p>fazendo agora nova alteração</p>
 </body>
