mais uma alteração

--- a/about.html
+++ b/about.html
@@ -7,4 +7,5 @@
     <p>testando git</p>
     <p>agora está correto</p>
     <p>fazendo agora nova alteração</p>
+    <p>fazendo mais mais uma alteração</p>
 </body>
