--- a/about.html
+++ b/about.html
@@ -7,5 +7,6 @@
     <p>testando git</p>
     <p>agora está correto</p>
     <p>fazendo agora nova alteração</p>
-    <p>fazendo mais mais uma alteração</p>
+    <p>fazendo mais uma alteração</p>
+    <p>devolvendo a correção</p>
 </body>
